--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "chrome-extension-boilerplate-react-vite",
-  "version": "0.3.5",
-  "description": "chrome extension boilerplate",
+  "version": "1.0.0",
+  "description": "跨境电商小助手",
   "license": "MIT",
   "repository": {
     "type": "git",
