fix：兼容pdd多种布局情况

--- a/pages/content/package.json
+++ b/pages/content/package.json
@@ -20,7 +20,8 @@
   },
   "dependencies": {
     "@extension/shared": "workspace:*",
-    "@extension/storage": "workspace:*"
+    "@extension/storage": "workspace:*",
+    "lodash-es": "^4.17.21"
   },
   "devDependencies": {
     "@extension/hmr": "workspace:*",
